tests/parser/bad/stmts_t-id-bind-exists-id-with.scilla
scilla_version 0

contract Test
(a : Map Uint128 Bool)

(* lacks key access *)
transition something ()
  b <- exists map
end
